k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
spec:
  ingressClassName: traefik
  tls:
    - hosts:

      secretName: multi-domain-tls
  rules:
    - host: zachsexton.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-site
                port:
                  number: 80
    - host: petfoodfinder.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petfoodfinder
                port:
                  number: 80
    - host: vigilo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vigilo
                port:
                  number: 80
