k8s/ingress/personal-site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "envoy"
spec:
  rules:
  - host: zachsexton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-site
            port:
              number: 80
  - host: www.zachsexton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-site
            port:
              number: 80
