k8s/ingress/spotifybutler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotifybutler-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "envoy"
spec:
  rules:
  - host: spotifybutler.zachsexton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotifybutler
            port:
              number: 80
